--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-streamlit==1.35.0
-pandas==2.2.2
-scikit-learn==1.4.2
-matplotlib==3.8.4
-seaborn==0.13.2
-joblib==1.4.0
+streamlit
+pandas>=2.0
+numpy>=1.25
+scikit-learn>=1.3
+matplotlib
+seaborn
+joblib
